Fix to overflow x mobile

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,7 +6,7 @@ body {
     width: 100%;
     max-width: 1900px;
     margin: 0 auto;
-    overflow-x: hidden;
+    // overflow-x: hidden;
     font-family: 'Archivo', Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
 }
 
